Revision history for Perl extension DBIx::SearchBuilder.

1.57

* INCOMPATIBLE CHANGE: NextPage and PrevPage were adding rows from
  the previous page. Jesse claims that when he wrote this code, he 
  was 20 years old and it seemed like a good idea at the time.
* unify case insensitive characters to avoid using LOWER() in some
  cases
* We now RedoSearch when RowsPerPage is changed
* No longer RedoSearch if FirstRow is called, but is not actually changed
* Document all paging functions and test them
* handle LOWER() in redundant LEFT joins optimizer,
  for Oracle and may be Pg
* Make debugging problems easier by passing errors back 
  https://rt.cpan.org/Ticket/Display.html?id=55203
* fix Record->PrimaryKeys, field names in values hash are lc'ed
  https://rt.cpan.org/Ticket/Display.html?id=18280
* doc updates and cleanups

1.56 Fri Jul 17 02:05:32 MSD 2009

* Don't use LOWER/ILIKE with dates, heuristic is used, but shouldn't
  harm other things
* Don't apply DISTINCT on queries with group by, COUNT(DISTINCT x) is
  different and covered in Column method

1.55 Thu May  7 19:44:47 MSD 2009

* Put test suite SQLite databases inside of tempdirs so they get
  garbage collected properly. Thanks to Andreas Koenig
  [rt.cpan.org #41322]
* Allow ->Join to pre-existing collection object
* Imlement and test SB::Handle::Fields
* Pg can not guaranty order in the following queries:
  SELECT ... FROM (SELECT... ORDER BY ...)
  we use them to build distinct sets with ordering by columns
  in joined tables. Switched to group by instead of sub-selects.

1.54 Wed Jul  9 09:34:25 EDT 2008

* When aborting transactions, we need to flush our cache,
  because SQLite is reusing the primary id for later inserts and the cache
  can otherwise become inconsistent.

1.53 Tue Apr  2 03:06:56 UTC 2008

* Fix mysql version check in DistinctQuery function
* Fix order by outer column on Oracle
* Improve tests

1.52 Tue Apr  1 00:48:56 UTC 2008
